--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Tasty Hits</title>
+
 </head>
 
 <body>
@@ -37,5 +38,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_4IkU4g9IaPoEhXAOSJIeX");
+   })();
+</script>
 </html>
